to take into account 16 bits colorspaces, we only use the 5 highest bits of the red channel this fixes bug #1310

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@23793 a95241bf-73f2-0310-859d-f6bbb57e9c96